# Course-Project-5

./: .gitignore  README.md  data_analysis.ipynb  data_processing.ipynb  data_research.ipynb  main.py  package-lock.json  package.json  pyproject.toml  test_main.http
Backend/: .gitignore  Dockerfile  requirements.txt
Backend/api_v1/: __init__.py
Backend/api_v1/temperature/: crud.py  schemas.py  views.py
Backend/core/: config.py
Backend/core/models/: enums.py
Backend/models/ann/: model_temperature.py
Backend/models/ann/keras/: best_model_relative_humidity.keras  best_model_temperature.keras
Backend/models/ann/scalers/: scaler_relative_humidity.joblib  scaler_temperature.joblib  scaler_wind_speed.joblib
Backend/tests/: test_main.py
api_v1/temperature/: crud.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Forecast.jsx  Inputs.jsx  TemperatureAndDetails.jsx  TimeAndLocation.jsx  TopButtons.jsx
frontend/src/components/Basel/: BaselForecast.jsx  BaselTemperature.jsx  BaselTimeAndLocation.jsx
frontend/src/components/Loader/: Loader.css  Loader.jsx
frontend/src/services/: weatherService.js
models/ann/: model_prediction.ipynb  model_temperature.py  model_training.ipynb
models/ann/.ipynb_checkpoints/: model_testing-checkpoint.ipynb
models/ann/best_models/: best_model_wind_speed.keras
temperature/ann/: best_model.keras  best_model_full_year.keras  model.ipynb  model_testing.ipynb  model_training.ipynb
