[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Bektur777 <ubei003@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
keras = "2.14.0"
tensorflow-io-gcs-filesystem = { version = "0.31.0"}
tensorflow = "2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
